syntax = "proto3";


option java_multiple_files = true;
option java_outer_classname = "ConfigurationHandlerProto";
option objc_class_prefix = "O";

package GrupoA.ConfigurationHandler.ConfigHandlerService;

service ConfigHandler {
    rpc joinFileSystemConfig (Requester) returns (ConfigReponse) {}
    rpc leaveFileSystemConfig (Requester) returns (ConfigReponse) {}
    rpc joinCrushMapConfig (Requester) returns (ConfigReponse) {}
    rpc leaveCrushMapConfig (Requester) returns (ConfigReponse) {}
}

message IntMessage {
    int32 Value = 1;
}

message ConfigReponse {
    string configuration = 1;
    string id = 2;
    int32 memberCount = 3;
}

message Requester {
    string ip = 1;
}