syntax = "proto3";


option java_multiple_files = true;
option java_outer_classname = "FileSystemProto";
option objc_class_prefix = "O";

package GrupoA.StorageController.gRPCService.FileSystem;

service FileSystem {
//    rpc mkFile (pathOnlyArgs) returns (BooleanMessage) {}
    rpc rmFile (pathOnlyArgs) returns (BooleanMessage) {}
    rpc rmDir (pathOnlyArgs) returns (BooleanMessage) {}
    rpc mkDir (pathOnlyArgs) returns (BooleanMessage) {}
}


message pathOnlyArgs {
    string filePath = 1;
}

message Metada {
    enum MetadaType {
        DIR = 0;
        FILE = 1;
      }
}

message ObjectData{
    int64 hash = 1;
    bytes objectData = 2;
}

message BooleanMessage {
    bool result = 1;
}